update user attribute based on option chosen